--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,8 @@ html {
  .sidebar ul li {
     list-style-type: none;
     margin: 0px;
+    height: 50px;
+    line-height: 50px;
   }
  .sidebar ul li a {
     text-decoration: none;
@@ -168,7 +170,7 @@ html {
     display: block;
     transition: 0.3s;
     list-style-type: none;
-    padding: 15px 20px;
+    padding: 0px 20px;
     border-bottom: 1px dotted #ccc;
   }
  .sidebar ul li a span {
@@ -189,6 +191,7 @@ html {
     font-size: 17px;
     width: 20px;
     margin-right: 10px;
+    line-height: 50px;
     text-align: center;
     color: #ccc;
   }
